# kek-example

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCompilerFlags.cmake
include/example/: application.hpp  math.hpp  objects.hpp
src/: main.cpp  stb.cpp
